back-spring-trading-predictions: update prediction related DTOs, service, controller to prep for consuming fastApi